# brownnote

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/agents/: academy-president.agent.md  bibliographer.agent.md  chief-of-staff.agent.md  coffee-machine-guru.agent.md  communications.agent.md  consistency-auditor.agent.md  data-analyst.agent.md  data-analyst.md  dietrich.agent.md  experimentalist.agent.md  experimentalist.md  ig-nobel-oracle.agent.md  journal-editor.agent.md  journal-editor.md  lab-manager.agent.md  lab-meeting.agent.md  literature-researcher.md  loving-spouse.agent.md  nobel-laureate.agent.md  opus.agent.md  paper-writer.agent.md  paper-writer.md  pop-culture-verifier.agent.md  provocateur.agent.md  research-scout.agent.md  reviewer-a.agent.md  reviewer-b.agent.md  reviewer-c.agent.md  reviewer-d.agent.md  reviewer-e.agent.md  simulation-engineer.agent.md  simulation-engineer.md  turing-laureate.agent.md
.github/instructions/: agents.instructions.md  analysis.instructions.md  paper.instructions.md  paper1.instructions.md  paper10.instructions.md  paper2.instructions.md  paper3.instructions.md  paper4.instructions.md  paper5.instructions.md  paper6.instructions.md  paper7.instructions.md  paper8.instructions.md  paper9.instructions.md  (+2 more)
docker/: Dockerfile  docker-compose.yml
docs/: RESEARCH-VISION.md  agent-author.md  ai-assisted-research-detailed.md  ai-assisted-research-event-log.md  ai-assisted-research.md  experimental-protocol.md  fea-approach.md  historical-survey.md  ig-nobel-strategy.md  instructions-author.md  literature-review.md  methodology.md  mid-tenure-research-statement.md  mid-tenure-research-statement.tex  novel-ideas.md  p10-validation-sources.md  paper9-literature-review.md  phantom-experiment-design.md  publication-venues.md  repo-design.md  review-article-scope.md  skill-author.md
notebooks/: 01_analytical_solutions.ipynb  README.md
paper/: cover-letter.tex  graphical-abstract.py  highlights.txt  main.tex  references.bib  supplementary.out  supplementary.tex
paper2-gas-pockets/: .gitignore  cover-letter.tex  generate_figures.py  main.tex  references.bib
paper3-scaling-laws/: main.tex  references.bib
paper6-sub-bass/: main.tex  references.bib
scripts/: check_consistency.py  forward_inverse_gap.py  forward_inverse_proof.py  gamma2_figure.py  general_identifiability.py  generate_all_figures.py  generate_jsv_figures.py  generate_oblate_prolate_figure.py  generate_p10_figures.py  generate_p7_figures.py  generate_p8_expansion_figure.py  generate_p8_figures.py  generate_p8_summary_figure.py  generate_p9_lifting_theorem_figure.py  generate_paper6_figures.py  n1_mode_analysis.py  p10_sensitivity.py  ritz_convergence.py  run_convergence_study.py  run_modal_analysis.py  sigma0_analysis.py  watermelon_experiment_predictions.py
src/: __init__.py
tests/: conftest.py  test_analytical.py  test_bladder_m1m4.py  test_borborygmi.py  test_extraction.py  test_figures.py  test_kac_identifiability.py  test_materials.py  test_mesh.py  test_power_law_proof.py  test_sub_bass_coupling.py  test_universality.py  test_watermelon.py
whisky/: semester-6-break.md
(+363 files in other folders)
